<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.DealRunner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/settings_fragment">
    <TextView
        android:id="@+id/title_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/suezone_regular"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_header"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/accountInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/suezone_regular"
            android:text="@string/account_info"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="17sp"
            android:layout_marginBottom="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <TextView
            android:id="@+id/change_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_italic"
            android:text="@string/display_full_name"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="?colorPrimary"
            app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />

        <TextView
            android:id="@+id/user_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="@font/poppins_italic"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="?colorPrimary"
            app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/change_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/poppins_italic"
                android:text="@string/display_email"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="?colorPrimary"
                app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/poppins_italic"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:backgroundTint="?colorPrimary"
                app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />

        </LinearLayout>

        <TextView
            android:id="@+id/location_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="0dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/suezone_regular"
            android:text="@string/location_preferences"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="17sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/log_out_button"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="30dp"
            android:background="@null"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/poppins_regular"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            android:text="@string/log_out"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>


</RelativeLayout>