...
    <FrameLayout
        android:id="@+id/home_screen_manager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deals_home_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deals_home_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
...
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/deals_settings_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/firefly"
        android:fontFamily="@font/suezone_regular"
        android:gravity="bottom|center"
        android:text="Settings"
...
