<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.DealRunner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/view_home_page">

<LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/customer_address_id"
        android:background="@color/white"
        android:padding="5dp">


        <TextView
            android:id="@+id/deals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="10dp"
            android:text="@string/deal_nearby"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textSize="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>



    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/deals_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/customer_address_id" />



</RelativeLayout>