<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.DealRunner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/decision_fragment">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/suezone_regular"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        android:textSize="40sp" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/textView2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_italic"
            android:text="@string/i_want_to"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/grab_deals_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/grab_deals"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_italic"
            app:backgroundTint="?colorPrimary"
            app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/post_deals_button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/post_deals"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_italic"
            app:backgroundTint="?colorPrimary"
            app:shapeAppearanceOverlay="?shapeAppearanceMediumComponent" />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/log_in_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/already_have_an_account"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        app:backgroundTint="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:stateListAnimator="@null"
        android:background="@null"
        />
</RelativeLayout>