...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    android:theme="@style/Theme.DealRunner"
    tools:context=".MainActivity"
    android:id="@+id/login_fragment">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="65dp"

...
            android:stateListAnimator="@null"/>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:insetTop="0dp"
...
