...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/signup_consumer_parent"
    android:theme="@style/Theme.DealRunner">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

...
